Fixed search bar getting too wide on all parts and all models pages.

--- a/static/css/all-models.css
+++ b/static/css/all-models.css
@@ -37,6 +37,10 @@
     font-size: clamp(20px, 4vw, 32px);
 }
 
+.models-search {
+    max-width: 800px;
+}
+
 /* Stylings for models portion of all-models page */
 
 .models {
