--- a/static/css/all-parts.css
+++ b/static/css/all-parts.css
@@ -37,6 +37,10 @@
     font-size: clamp(20px, 4vw, 32px);
 }
 
+.parts-search {
+    max-width: 800px;
+}
+
 /* Stylings for models portion of all-models page */
 
 .parts {
